--- a/monolithic/pom.xml
+++ b/monolithic/pom.xml
@@ -12,9 +12,9 @@
 		<org.springframework-version>3.1.0.M2</org.springframework-version>
 		<org.aspectj-version>1.6.11</org.aspectj-version>
 		<org.slf4j-version>1.5.10</org.slf4j-version>
-		<org.springframework.integration-version>2.1.0.M2</org.springframework.integration-version>
-		<org.springframework.amqp-version>1.0.0.RELEASE</org.springframework.amqp-version>
-		<org.springframework.data.mongodb-version>1.0.0.M4</org.springframework.data.mongodb-version>
+		<org.springframework.integration-version>2.1.0.M3</org.springframework.integration-version>
+		<!-- org.springframework.amqp-version>1.0.0.RELEASE</org.springframework.amqp-version -->
+		<!-- org.springframework.data.mongodb-version>1.0.0.M4</org.springframework.data.mongodb-version -->
 	</properties>
 	<dependencies>
 		<!-- CloudFoundry -->
@@ -37,9 +37,19 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.integration</groupId>
+			<artifactId>spring-integration-redis</artifactId>
+			<version>${org.springframework.integration-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.integration</groupId>
 			<artifactId>spring-integration-jdbc</artifactId>
 			<version>${org.springframework.integration-version}</version>
 		</dependency>
+		<dependency>
+      		<groupId>org.codehaus.jackson</groupId>
+      		<artifactId>jackson-core-asl</artifactId>
+      		<version>1.4.3</version>
+	    </dependency>
 		<dependency>
       		<groupId>org.codehaus.jackson</groupId>
       		<artifactId>jackson-mapper-asl</artifactId>
@@ -176,11 +186,13 @@
 		</dependency>
 
 		<!-- RabbitMQ/AMQP -->
+		<!--
 		<dependency>
   			<groupId>org.springframework.amqp</groupId>
   			<artifactId>spring-rabbit</artifactId>
   			<version>${org.springframework.amqp-version}</version>
 		</dependency>
+		-->
 		<!--
 		<dependency>
 			<groupId>org.springframework.data</groupId>
@@ -188,11 +200,13 @@
 			<version>${org.springframework.data.redis-version}</version>
 		</dependency>
 		-->
+		<!--
 		<dependency>
 		  <groupId>org.springframework.data</groupId>
 		  <artifactId>spring-data-mongodb</artifactId>
 		  <version>${org.springframework.data.mongodb-version}</version>
 		</dependency> 
+		-->
 
 		<!-- Database -->
 		<dependency>
