--- a/modular/inventory/pom.xml
+++ b/modular/inventory/pom.xml
@@ -30,6 +30,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.integration</groupId>
+			<artifactId>spring-integration-http</artifactId>
+			<version>${org.springframework.integration-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.integration</groupId>
 			<artifactId>spring-integration-mongodb</artifactId>
 			<version>${org.springframework.integration-version}</version>
 		</dependency>
